--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+@import variables
+
+.modal-container
+    position: fixed
+    top: 0
+    left: 0
+
+    width: 100vw
+    height: 100vh
+
+    background: #000000AA
+
+    display: flex
+    justify-content: center
+    align-items: center
+
+.modal-body
+    background: white
+
+    width: 80%
+    height: fit-content
+
+    padding: 10px
+
+
+.modal-header
+    color: $main-color
+
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
