--- a/src/app/character-sheet/character-sheet.component.sass
+++ b/src/app/character-sheet/character-sheet.component.sass
@@ -1,3 +1,5 @@
+@import ../../variables
+
 $row-gap: 5px
 $row-padding: 10px
 
@@ -40,7 +42,7 @@ $row-padding: 10px
 
 
 .border
-    border: 4px solid #874640
+    border: 4px solid $main-color
 
 .attributes, .skills
     display: flex
