--- a/src/app/die-selector/die-selector.component.sass
+++ b/src/app/die-selector/die-selector.component.sass
@@ -8,7 +8,7 @@
     -ms-user-select: none
     user-select: none
 
-.dice div
+.die
     width: 30px
     height: 30px
 
@@ -17,14 +17,19 @@
 
     font-size: 0.8em
 
-    display: flex
-    justify-content: center
-    align-items: center
-
     background-color: grey
+
 
 .dice div.selected
     background-color: white
 
 .dice div:hover
     cursor: pointer
+
+.upgrade, .die
+    display: flex
+    justify-content: center
+    align-items: center
+
+.upgrade
+    font-size: 1.4em
