--- a/src/app/character-sheet/character-sheet.component.sass
+++ b/src/app/character-sheet/character-sheet.component.sass
@@ -44,7 +44,7 @@ $row-padding: 10px
 .border
     border: 4px solid $main-color
 
-.attributes, .skills
+.attributes, .skills, .weapons, .armors
     display: flex
     flex-direction: column
     row-gap: $row-gap
