--- a/src/app/character-sheet/character-sheet.component.sass
+++ b/src/app/character-sheet/character-sheet.component.sass
@@ -53,3 +53,10 @@ $row-padding: 10px
     display: flex
     align-items: center
     justify-content: space-between
+
+
+.skill-row
+    display: flex
+    justify-content: space-between
+
+    row-gap: 4px
