--- a/src/app/character-sheet/character-sheet.component.sass
+++ b/src/app/character-sheet/character-sheet.component.sass
@@ -60,3 +60,7 @@ $row-padding: 10px
     justify-content: space-between
 
     row-gap: 4px
+
+.flex-center
+    display: flex
+    justify-content: center
