--- a/src/app/components/character-sheet/character-sheet.component.html
+++ b/src/app/components/character-sheet/character-sheet.component.html
@@ -5,12 +5,7 @@
 <hr />
 
 <app-skills [character]="c"></app-skills>
-
-<div class="weapons">
-    Weapons 
-    <button>Manage weapons</button>
-</div>
-
+<app-weapons [character]="c"></app-weapons>
 <app-armors [character]="c"></app-armors>
 
 <app-powers></app-powers>
